RESOLVED FIXED59828
HTMLMediaElement should not seek to time 0 when readyState reaches HAVE_METADATA
https://bugs.webkit.org/show_bug.cgi?id=59828
Summary HTMLMediaElement should not seek to time 0 when readyState reaches HAVE_METADATA
Eric Carlson
Reported 2011-04-29 14:06:23 PDT
At some point in the past, the spec required a seek to time 0 once metadata is loaded. The spec text has been changed to say: If either the media resource or the address of the current media resource indicate a particular start time, then set the initial playback position to that time, seek to that time, and let jumped be true. Ignore any resulting exceptions (if the position is out of range, it is effectively ignored). WebKit doesn't support starting at an offset, so we should not force a seek to time 0.
Attachments
Proposed patch (1.25 KB, patch)
2011-04-30 15:40 PDT, Eric Carlson
eric: review+
Eric Carlson
Comment 1 2011-04-30 15:40:25 PDT
Created attachment 91807 [details] Proposed patch
Eric Seidel (no email)
Comment 2 2011-05-01 09:48:58 PDT
So this is not at all visible from javascript (that surprises me).
Eric Carlson
Comment 3 2011-05-01 15:56:44 PDT
(In reply to comment #2) > So this is not at all visible from javascript (that surprises me). It isn't visible because it is a noop - the media file has just been opened and it is no playing, so "seeking" to time zero does nothing.
Eric Seidel (no email)
Comment 4 2011-05-01 16:30:12 PDT
Comment on attachment 91807 [details] Proposed patch OK. Would be nice to say that in the ChagneLog. :)
Eric Carlson
Comment 5 2011-05-02 10:53:52 PDT
http://trac.webkit.org/changeset/85488 (with improved ChangeLog text ;-) )
Note You need to log in before you can comment on or make changes to this bug.