2011-05-02  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Eric Seidel.

        HTMLMediaElement should not seek to time 0 when readyState reaches HAVE_METADATA
        https://bugs.webkit.org/show_bug.cgi?id=59828

        No new tests required, no functional change because seeking to time zero before playback
        begins has no effect.

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::setReadyState): Don't seek to time 0 when readyState reaches
            HAVE_METADATA.



Canonical link: https://commits.webkit.org/75192@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85488 268f45cc-cd09-0410-ab3c-d52691b4dbfc